# hello-again

./: meson.build
data/: com.github.davidjdotorg.hello-again.appdata.xml.in  com.github.davidjdotorg.hello-again.desktop.in
po/: POTFILES  com.github.davidjdotorg.hello-again.pot  de.po  es.po
src/: Application.vala
